# ndif-citations

./: .env.example  .gitignore  README.md  pyproject.toml
data/: known_venues.json
docs/superpowers/plans/: 2026-05-19-confidence-and-edit.md
src/ndif_citations/: __init__.py  __main__.py  cli.py  config.py  discover.py  edit_schema.py  extract.py  models.py  output.py  pdf_cache.py  process.py  router.py  utils.py  venue.py
tests/: conftest.py  test_classify_band_integration.py  test_classify_category.py  test_cli_bucket_commands.py  test_cli_debug.py  test_cli_edit.py  test_cli_reclassify.py  test_confidence_band.py  test_decide_bucket.py  test_discover_cross_repo.py  test_discover_dedup.py  test_discover_discard.py  test_discover_linked_paper.py  test_edit_schema.py  test_extract_enrichment.py  test_fixtures_loader.py  test_known_venues_schema.py  test_output_merge.py  test_output_report.py  test_output_schema.py  test_process_fallbacks.py  test_process_fill_gaps_protect.py  test_process_no_pdf_bypass.py  test_router.py  test_router_protected_fill_gaps.py  test_select_prompt.py  test_tier_aware_prompt.py  test_utils_affiliations.py  test_utils_arxiv.py  test_utils_classify.py  test_utils_context.py  test_utils_misc.py  test_utils_readme.py  test_venue.py
tests/fixtures/papers/: abstract_only_with_keywords.expected.json  abstract_only_with_keywords.txt  acks_only_ndif.expected.json  acks_only_ndif.txt  acks_only_nnsight.expected.json  acks_only_nnsight.txt  acks_with_citation_inline.expected.json  acks_with_citation_inline.txt  (+26 more)
tests/helpers/: llm.py
